# MCP-Minesweeper

./: .gitignore  AI_AGENT_INSTRUCTIONS.md  CLAUDE.md  FASTMCP_AI_AGENT_GUIDE.md  LICENSE  README.md  pyproject.toml  test_websocket.py
examples/: __init__.py
examples/clients/: basic_client.py
examples/configs/: README.md  claude_desktop_config.json
examples/servers/: basic_server.py  comprehensive_server.py  filesystem_server.py  minesweeper_server.py  template_server.py
llm/: aws_bedrock_implementation.md  aws_deployment_examples.md  aws_setup.md  challenges.md  claude_conversation.md  claude_integration.md  decisions.md  plan.md  progress.md  proxy_tool_implementation.md  server_api_endpoints.md  start_here.md  streaming_response_handling.md  tool_chaining.md  tool_result_caching.md  tutorial_adding_tools.md  websocket_implementation.md
mcp_example/adapters/aws/: __init__.py  bedrock.py  claude.py
mcp_example/adapters/http/: cache.py  client.py
mcp_example/adapters/stdio/: cli.py
mcp_example/core/: executor.py  registry.py  schema.py  validation.py
mcp_example/examples/: aws_deployment.py  basic_operations.py  claude_conversation.py  external_integrations.py  proxy_with_error_handling.py  tool_chaining.py  websocket_streaming.py
mcp_example/server/: app.py  main.py
mcp_example/tools/: __init__.py  calculator.py  proxy.py  text.py  weather.py
tests/: __init__.py  test_basic_server.py  test_bedrock.py  test_cache.py  test_claude.py  test_core.py  test_proxy_tool.py  test_websocket_streaming.py
tests/examples/: test_claude_conversation.py
