[tool.poetry]
name = "mcp-examples"
version = "0.2.0"
description = "Sharp, accurate examples for the Model Context Protocol (MCP)"
authors = ["MCP Examples <examples@mcp.dev>"]
readme = "README.md"
packages = [{include = "examples"}]

[tool.poetry.dependencies]
python = "^3.10"
# FastMCP 2.0 - Enterprise MCP framework
fastmcp = "^2.7.1"
# Keep official SDK for compatibility
mcp = "^1.9.3"
# Additional useful libraries for examples
httpx = "^0.28.1"
aiofiles = "^24.1.0"
pydantic = "^2.8.0"
typer = "^0.15.2"
rich = "^13.7.0"
# Game simulation libraries
asyncio-mqtt = "^0.16.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.11.0"
pytest-cov = "^4.1.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*" 